[package]
name = "nine-patch"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-minimal-protocol = "0.1.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'